# commute-copilot-bangalore

./: .env.example  .gitignore  README.md  agentcore_app.py  bedrock_client.py  check_stack.py  config.py  inspect_elastic.py  llm_provider.py  main.py  models.py  orchestration_graph.py  pyproject.toml  requirements.txt  skills-lock.json
CommuteCopilot/agentcore/: agentcore.json
CommuteCopilot/agentcore/cdk/: package-lock.json
agents/: __init__.py  base.py  route_traffic_agent.md  route_traffic_agent.py  supervisor_agent.md  supervisor_agent.py  transit_context_agent.py  weather_agent.md  weather_agent.py
agents/details/: supervisor_agent.md  transit_context_agent.md
docs/: agentcore_deploy.md  architecture.md  demo_script.md  judging_mapping.md
elastic/: create_indices.py
elastic/mappings/: commute_context.json  commute_decision_logs.json  commute_places.json  commute_routes.json
elastic/queries/: hybrid_search.json  route_risk.esql  vector_search.json
ingestion/: crawl_sources.py  generate_embeddings.py  ingest_sample_data.py
ingestion/sample_data/: bengaluru_hotspots.json  commute_context.crawled.json  commute_context.embedded.json  commute_context.json  metro_stations.json  parking_zones.json  sample_routes.embedded.json  sample_routes.json
tools/: __init__.py  decision_log_tool.py  elastic_search_tool.py  route_tool.py  traffic_tool.py  transit_tool.py  weather_tool.py
