[project]
name = "commute-copilot-bengaluru"
version = "0.1.0"
description = "Multi-agent commute intelligence MVP for Bengaluru."
requires-python = ">=3.10"
dependencies = [
  "elasticsearch>=8.13.0",
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "boto3>=1.34.0",
  "python-dotenv>=1.0.1",
  "langchain>=0.3.0",
  "langchain-aws>=0.2.0",
  "langgraph>=0.2.0",
  "bedrock-agentcore>=1.0.0"
]

[tool.uv]
package = false
